--- a/app/src/main/res/layout/display_one_stock_fragment.xml
+++ b/app/src/main/res/layout/display_one_stock_fragment.xml
@@ -57,7 +57,8 @@
                 android:id="@+id/priceChangeTextView_OneStockDisplay"
                 android:textSize="15sp"
                 android:paddingLeft="10dp"
-                android:paddingRight="10dp" />
+                android:paddingRight="10dp"
+                android:textColor="@android:color/holo_green_dark"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -65,7 +66,8 @@
                 android:id="@+id/priceChangePercentageTextView_OneStockDisplay"
                 android:textSize="15sp"
                 android:paddingLeft="10dp"
-                android:paddingRight="15dp"/>
+                android:paddingRight="15dp"
+                android:textColor="@android:color/holo_green_dark"/>
 
         </LinearLayout>
 
