--- a/app/src/main/res/layout/splash_screen_fragment.xml
+++ b/app/src/main/res/layout/splash_screen_fragment.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".view.MainActivity"
+    tools:context=".splashscreen.SplashScreen"
     android:background="@android:color/white">
 
     <ImageView
