Fixed a bug in the red/green color selection logic in the StocksRecyclerViewAdapter

--- a/app/src/main/res/layout/stock_recycler_item.xml
+++ b/app/src/main/res/layout/stock_recycler_item.xml
@@ -44,8 +44,7 @@
                     android:textSize="15sp"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
-                android:layout_gravity="right"
-                android:textColor="@android:color/holo_green_dark" />
+                android:layout_gravity="right"/>
 
             <TextView
                     android:layout_width="wrap_content"
@@ -54,8 +53,7 @@
                     android:textSize="15sp"
                     android:paddingLeft="10dp"
                     android:paddingRight="15dp"
-                android:layout_gravity="right"
-                android:textColor="@android:color/holo_green_dark" />
+                android:layout_gravity="right"/>
         </LinearLayout>
 
 
