--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,12 +27,11 @@
             android:textSize="35sp"
             android:gravity="center_horizontal" />
 
-        <FrameLayout
-            android:layout_width="match_parent"
+        <ImageView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/linearLayout"
-            android:layout_alignParentEnd="true"
-            android:id="@+id/mainDisplayFrameLaout"></FrameLayout>
+            android:id="@+id/imageView"
+            android:background="@drawable/splash" />
 
 
     </LinearLayout>
