--- a/app/src/main/res/layout/stock_quote_activity.xml
+++ b/app/src/main/res/layout/stock_quote_activity.xml
@@ -27,12 +27,199 @@
             android:textSize="35sp"
             android:gravity="center_horizontal" />
 
-        <FrameLayout
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/displayOneStockFragment"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/linearLayout"
-            android:layout_alignParentEnd="true"
-            android:id="@+id/stockQuoteFrameLaout"></FrameLayout>
+            android:layout_height="match_parent"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            tools:context=".splashscreen.SplashScreen"
+            android:background="@android:color/white">
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="50sp"
+                    android:id="@+id/tickerSymbolTextView_OneStockDisplay"
+                    android:layout_gravity="center_horizontal"
+                    android:textColor="@android:color/black" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/companyNameTextView_OneStockDisplay"
+                    android:textSize="30sp"
+                    android:singleLine="true"
+                    android:layout_gravity="center_horizontal"
+                    android:textColor="@android:color/darker_gray" />
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/priceChangeLinearLayout"
+                    android:layout_gravity="center_horizontal"
+                    android:paddingTop="15dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/latestPriceTextView_OneStockDisplay"
+                        android:textSize="20sp"
+                        android:paddingLeft="5dp"
+                        android:paddingRight="10dp"
+                        android:textColor="@android:color/black" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/priceChangeTextView_OneStockDisplay"
+                        android:textSize="15sp"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp"
+                        android:textColor="@android:color/holo_green_dark"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/priceChangePercentageTextView_OneStockDisplay"
+                        android:textSize="15sp"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="15dp"
+                        android:textColor="@android:color/holo_green_dark"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_horizontal"
+                    android:paddingBottom="10dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/latestVolumeTextView_OneStockDisplay"
+                        android:textColor="@android:color/black"
+                        android:layout_gravity="center_horizontal"
+                        android:textSize="20sp"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Volume"
+                        android:id="@+id/latestVolumeLabelTextView"
+                        android:layout_gravity="center_horizontal"
+                        android:paddingRight="15dp"
+                        android:textColor="@android:color/black"
+                        android:textSize="20sp"
+                        android:paddingLeft="15sp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Open "
+                        android:id="@+id/textView2"
+                        android:textSize="20sp"
+                        android:paddingLeft="5dp"
+                        android:paddingRight="10dp"
+                        android:textColor="@android:color/black" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/openPriceTextView_OneStockDisplay"
+                        android:textSize="20sp"
+                        android:textColor="@android:color/darker_gray" />
+
+                </LinearLayout>
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Close "
+                        android:id="@+id/textView4"
+                        android:textSize="20sp"
+                        android:paddingLeft="5dp"
+                        android:paddingRight="10dp"
+                        android:textColor="@android:color/black" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/closePriceTextView_OneStockDisplay"
+                        android:textSize="20sp"
+                        android:textColor="@android:color/darker_gray" />
+                </LinearLayout>
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:id="@+id/sectorLinearLayout"
+                    android:paddingBottom="15dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Sector"
+                        android:id="@+id/sectorLabelTextView"
+                        android:paddingRight="15sp"
+                        android:textColor="@android:color/black"
+                        android:textSize="20sp"
+                        android:paddingLeft="5dp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/sectorTextView_OneStockDisplay"
+                        android:textColor="@android:color/darker_gray"
+                        android:textSize="20sp" />
+
+                </LinearLayout>
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Add To Portfolio"
+                    android:id="@+id/addStockButton"
+                    android:background="@android:color/holo_green_dark"
+                    android:onClick="addStockToPortfolio"
+                    android:textSize="20sp" />
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Remove From Portfolio"
+                    android:id="@+id/removeStockButton"
+                    android:background="@android:color/holo_green_dark"
+                    android:onClick="removeFromPortfolio"
+                    android:textSize="20sp" />
+
+            </LinearLayout>
+
+        </RelativeLayout>
 
 
     </LinearLayout>
