--- a/app/src/main/res/layout/stock_quote_activity.xml
+++ b/app/src/main/res/layout/stock_quote_activity.xml
@@ -136,7 +136,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Open "
+                        android:text="Low "
                         android:id="@+id/textView2"
                         android:textSize="20sp"
                         android:paddingLeft="5dp"
@@ -159,7 +159,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Close "
+                        android:text="High "
                         android:id="@+id/textView4"
                         android:textSize="20sp"
                         android:paddingLeft="5dp"
@@ -205,7 +205,6 @@
                     android:text="Add To Portfolio"
                     android:id="@+id/addStockButton"
                     android:background="@android:color/holo_green_dark"
-                    android:onClick="addStockToPortfolio"
                     android:textSize="20sp" />
 
                 <Button
@@ -214,7 +213,6 @@
                     android:text="Remove From Portfolio"
                     android:id="@+id/removeStockButton"
                     android:background="@android:color/holo_green_dark"
-                    android:onClick="removeFromPortfolio"
                     android:textSize="20sp" />
 
             </LinearLayout>
